templates/network.json
{

    "Parameters":{
        "ApplicationName":{
            "Type":"String"
        },
        "EnvironmentName":{
            "Type":"String"
        },
        "VpcCIDR":{
            "Description":"Please enter the IP range (CIDR notation) for this VPC",
            "Type":"String",
            "Default":"10.192.0.0/16"
        },
        "PublicSubnet1CIDR":{
            "Description":"Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone",
            "Type":"String",
            "Default":"10.192.10.0/24"
        },
        "PublicSubnet2CIDR":{
            "Description":"Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone",
            "Type":"String",
            "Default":"10.192.11.0/24"
        },
        "PrivateSubnet1CIDR":{
            "Description":"Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone",
            "Type":"String",
            "Default":"10.192.20.0/24"
        },
        "PrivateSubnet2CIDR":{
            "Description":"Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone",
            "Type":"String",
            "Default":"10.192.21.0/24"
        }
    },
    "Resources":{
        "PublicSubnet1":{
            "Type":"AWS::EC2::Subnet",
            "Properties":{
                "VpcId":{
                    "Ref":"VPC"
                },
                "AvailabilityZone":{
                    "Fn::Select":[
                        0,
                        {
                            "Fn::GetAZs":{ "Ref" : "AWS::Region" }
                        }
                    ]
                },
                "CidrBlock":{
                    "Ref":"PublicSubnet1CIDR"
                },
                "MapPublicIpOnLaunch":true,
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Sub":"${ApplicationName}-${EnvironmentName} Public Subnet (AZ1)"
                        }
                    }
                ]
            }
        },
        "PublicSubnet2":{
            "Type":"AWS::EC2::Subnet",
            "Properties":{
                "VpcId":{
                    "Ref":"VPC"
                },
                "AvailabilityZone":{
                    "Fn::Select":[
                        1,
                        {
                            "Fn::GetAZs":{ "Ref" : "AWS::Region" }
                        }
                    ]
                },
                "CidrBlock":{
                    "Ref":"PublicSubnet2CIDR"
                },
                "MapPublicIpOnLaunch":true,
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Sub":"${ApplicationName} ${EnvironmentName} Public Subnet (AZ2)"
                        }
                    }
                ]
            }
        },
        "PrivateSubnet1":{
            "Type":"AWS::EC2::Subnet",
            "Properties":{
                "VpcId":{
                    "Ref":"VPC"
                },
                "AvailabilityZone":{
                    "Fn::Select":[
                        0,
                        {
                            "Fn::GetAZs":{ "Ref" : "AWS::Region" }
                        }
                    ]
                },
                "CidrBlock":{
                    "Ref":"PrivateSubnet1CIDR"
                },
                "MapPublicIpOnLaunch":false,
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Sub":"${ApplicationName} ${EnvironmentName} Private Subnet (AZ1)"
                        }
                    }
                ]
            }
        },
        "PrivateSubnet2":{
            "Type":"AWS::EC2::Subnet",
            "Properties":{
                "VpcId":{
                    "Ref":"VPC"
                },
                "AvailabilityZone":{
                    "Fn::Select":[
                        1,
                        {
                            "Fn::GetAZs":{ "Ref" : "AWS::Region" }
                        }
                    ]
                },
                "CidrBlock":{
                    "Ref":"PrivateSubnet2CIDR"
                },
                "MapPublicIpOnLaunch":false,
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Sub":"${ApplicationName} ${EnvironmentName} Private Subnet (AZ2)"
                        }
                    }
                ]
            }
        },
        "VPC":{
            "Type":"AWS::EC2::VPC",
            "Properties":{
                "CidrBlock":{
                    "Ref":"VpcCIDR"
                },
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Sub":"${ApplicationName}-${EnvironmentName}"
                        }
                    }
                ]
            }
        },
        "NatGateway1EIP":{
            "Type":"AWS::EC2::EIP",
            "DependsOn":"InternetGatewayAttachment",
            "Properties":{
                "Domain":"vpc"
            }
        },
        "NatGateway2EIP":{
            "Type":"AWS::EC2::EIP",
            "DependsOn":"InternetGatewayAttachment",
            "Properties":{
                "Domain":"vpc"
            }
        },
        "NatGateway1":{
            "Type":"AWS::EC2::NatGateway",
            "Properties":{
                "AllocationId":{
                    "Fn::GetAtt":[
                        "NatGateway1EIP",
                        "AllocationId"
                    ]
                },
                "SubnetId":{
                    "Ref":"PublicSubnet1"
                }
            }
        },
        "NatGateway2":{
            "Type":"AWS::EC2::NatGateway",
            "Properties":{
                "AllocationId":{
                    "Fn::GetAtt":[
                        "NatGateway2EIP",
                        "AllocationId"
                    ]
                },
                "SubnetId":{
                    "Ref":"PublicSubnet2"
                }
            }
        },
        "PublicRouteTable":{
            "Type":"AWS::EC2::RouteTable",
            "Properties":{
                "VpcId":{
                    "Ref":"VPC"
                },
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Sub":"${ApplicationName} ${EnvironmentName} Public Routes"
                        }
                    }
                ]
            }
        },
        "DefaultPublicRoute":{
            "Type":"AWS::EC2::Route",
            "Properties":{
                "RouteTableId":{
                    "Ref":"PublicRouteTable"
                },
                "DestinationCidrBlock":"0.0.0.0/0",
                "GatewayId":{
                    "Ref":"InternetGateway"
                }
            }
        },
        "PublicSubnet1RouteTableAssociation":{
            "Type":"AWS::EC2::SubnetRouteTableAssociation",
            "Properties":{
                "RouteTableId":{
                    "Ref":"PublicRouteTable"
                },
                "SubnetId":{
                    "Ref":"PublicSubnet1"
                }
            }
        },
        "PublicSubnet2RouteTableAssociation":{
            "Type":"AWS::EC2::SubnetRouteTableAssociation",
            "Properties":{
                "RouteTableId":{
                    "Ref":"PublicRouteTable"
                },
                "SubnetId":{
                    "Ref":"PublicSubnet2"
                }
            }
        },
        "PrivateRouteTable1":{
            "Type":"AWS::EC2::RouteTable",
            "Properties":{
                "VpcId":{
                    "Ref":"VPC"
                },
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Sub":"${ApplicationName} ${EnvironmentName} Private Routes (AZ1)"
                        }
                    }
                ]
            }
        },
        "DefaultPrivateRoute1":{
            "Type":"AWS::EC2::Route",
            "Properties":{
                "RouteTableId":{
                    "Ref":"PrivateRouteTable1"
                },
                "DestinationCidrBlock":"0.0.0.0/0",
                "NatGatewayId":{
                    "Ref":"NatGateway1"
                }
            }
        },
        "PrivateSubnet1RouteTableAssociation":{
            "Type":"AWS::EC2::SubnetRouteTableAssociation",
            "Properties":{
                "RouteTableId":{
                    "Ref":"PrivateRouteTable1"
                },
                "SubnetId":{
                    "Ref":"PrivateSubnet1"
                }
            }
        },
        "PrivateRouteTable2":{
            "Type":"AWS::EC2::RouteTable",
            "Properties":{
                "VpcId":{
                    "Ref":"VPC"
                },
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Sub":"${ApplicationName} ${EnvironmentName} Private Routes (AZ2)"
                        }
                    }
                ]
            }
        },
        "DefaultPrivateRoute2":{
            "Type":"AWS::EC2::Route",
            "Properties":{
                "RouteTableId":{
                    "Ref":"PrivateRouteTable2"
                },
                "DestinationCidrBlock":"0.0.0.0/0",
                "NatGatewayId":{
                    "Ref":"NatGateway2"
                }
            }
        },
        "PrivateSubnet2RouteTableAssociation":{
            "Type":"AWS::EC2::SubnetRouteTableAssociation",
            "Properties":{
                "RouteTableId":{
                    "Ref":"PrivateRouteTable2"
                },
                "SubnetId":{
                    "Ref":"PrivateSubnet2"
                }
            }
        },
        "InternetGateway":{
            "Type":"AWS::EC2::InternetGateway",
            "Properties":{
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Sub":"$!Sub ${ApplicationName}-${EnvironmentName}"
                        }
                    }
                ]
            }
        },
        "InternetGatewayAttachment":{
            "Type":"AWS::EC2::VPCGatewayAttachment",
            "Properties":{
                "InternetGatewayId":{
                    "Ref":"InternetGateway"
                },
                "VpcId":{
                    "Ref":"VPC"
                }
            }
        }
    },
"Outputs" : {
  "VPC" : {
    "Description" : "VPC",
    "Value" :  { "Ref" : "VPC" },
    "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-${ApplicationName}-${EnvironmentName}" }}
  },
  "PublicSubnet1" : {
    "Description" : "PublicSubnet1",
    "Value" :  { "Ref" : "PublicSubnet1" },
    "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-${ApplicationName}-${EnvironmentName}-PublicSubnet1" }}
  },
  "PublicSubnet2" : {
    "Description" : "PublicSubnet2",
    "Value" :  { "Ref" : "PublicSubnet2" },
    "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-${ApplicationName}-${EnvironmentName}-PublicSubnet2" }}
  },
  "PrivateSubnet1" : {
    "Description" : "PrivateSubnet1",
    "Value" :  { "Ref" : "PrivateSubnet1" },
    "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-${ApplicationName}-${EnvironmentName}-PrivateSubnet1" }}
  },
  "PrivateSubnet2" : {
    "Description" : "PrivateSubnet2",
    "Value" :  { "Ref" : "PrivateSubnet2" },
    "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-${ApplicationName}-${EnvironmentName}-PrivateSubnet2" }}
  },
  "VpcCIDR" : {
    "Description" : "VpcCIDR",
    "Value" :  { "Ref" : "VpcCIDR" },
    "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-${ApplicationName}-${EnvironmentName}-VpcCIDR" }}
  }
}

}
